quiche_bindings.dart


ffi.Pointer<Http3Connection> quiche_h3_accept(
  ffi.Pointer<Connection> quiche_conn,
  ffi.Pointer<Http3Config> config,
) {
_quiche_h3_accept ??= _dylib.lookupFunction<_c_quiche_h3_accept,_dart_quiche_h3_accept>('quiche_h3_accept');
  return _quiche_h3_accept(
    quiche_conn,
    config,
  );
}
_dart_quiche_h3_accept _quiche_h3_accept;

ffi.Pointer<Http3Connection> quiche_h3_conn_new_with_transport(
  ffi.Pointer<Connection> quiche_conn,
  ffi.Pointer<Http3Config> config,
) {
_quiche_h3_conn_new_with_transport ??= _dylib.lookupFunction<_c_quiche_h3_conn_new_with_transport,_dart_quiche_h3_conn_new_with_transport>('quiche_h3_conn_new_with_transport');
  return _quiche_h3_conn_new_with_transport(
    quiche_conn,
    config,
  );
}
_dart_quiche_h3_conn_new_with_transport _quiche_h3_conn_new_with_transport;

int quiche_h3_conn_poll(
  ffi.Pointer<Http3Connection> conn,
  ffi.Pointer<Connection> quic_conn,
  ffi.Pointer<ffi.Pointer<Http3Event>> ev,
) {
_quiche_h3_conn_poll ??= _dylib.lookupFunction<_c_quiche_h3_conn_poll,_dart_quiche_h3_conn_poll>('quiche_h3_conn_poll');
  return _quiche_h3_conn_poll(
    conn,
    quic_conn,
    ev,
  );
}
_dart_quiche_h3_conn_poll _quiche_h3_conn_poll;

int quiche_h3_event_type(
  ffi.Pointer<Http3Event> ev,
) {
_quiche_h3_event_type ??= _dylib.lookupFunction<_c_quiche_h3_event_type,_dart_quiche_h3_event_type>('quiche_h3_event_type');
  return _quiche_h3_event_type(
    ev,
  );
}
_dart_quiche_h3_event_type _quiche_h3_event_type;

int quiche_h3_event_for_each_header(
  ffi.Pointer<Http3Event> ev,
  ffi.Pointer<ffi.NativeFunction<_typedefC_2>> cb,
  ffi.Pointer<ffi.Void> argp,
) {
_quiche_h3_event_for_each_header ??= _dylib.lookupFunction<_c_quiche_h3_event_for_each_header,_dart_quiche_h3_event_for_each_header>('quiche_h3_event_for_each_header');
  return _quiche_h3_event_for_each_header(
    ev,
    cb,
    argp,
  );
}
_dart_quiche_h3_event_for_each_header _quiche_h3_event_for_each_header;

int quiche_h3_event_headers_has_body(
  ffi.Pointer<Http3Event> ev,
) {
_quiche_h3_event_headers_has_body ??= _dylib.lookupFunction<_c_quiche_h3_event_headers_has_body,_dart_quiche_h3_event_headers_has_body>('quiche_h3_event_headers_has_body');
  return _quiche_h3_event_headers_has_body(
    ev,
  );
}
_dart_quiche_h3_event_headers_has_body _quiche_h3_event_headers_has_body;

void quiche_h3_event_free(
  ffi.Pointer<Http3Event> ev,
) {
_quiche_h3_event_free ??= _dylib.lookupFunction<_c_quiche_h3_event_free,_dart_quiche_h3_event_free>('quiche_h3_event_free');
  return _quiche_h3_event_free(
    ev,
  );
}
_dart_quiche_h3_event_free _quiche_h3_event_free;

int quiche_h3_send_request(
  ffi.Pointer<Http3Connection> conn,
  ffi.Pointer<Connection> quic_conn,
  ffi.Pointer<struct (anonymous at quiche.h:449:9)> headers,
  int headers_len,
  int fin,
) {
_quiche_h3_send_request ??= _dylib.lookupFunction<_c_quiche_h3_send_request,_dart_quiche_h3_send_request>('quiche_h3_send_request');
  return _quiche_h3_send_request(
    conn,
    quic_conn,
    headers,
    headers_len,
    fin,
  );
}
_dart_quiche_h3_send_request _quiche_h3_send_request;

int quiche_h3_send_response(
  ffi.Pointer<Http3Connection> conn,
  ffi.Pointer<Connection> quic_conn,
  int stream_id,
  ffi.Pointer<struct (anonymous at quiche.h:449:9)> headers,
  int headers_len,
  int fin,
) {
_quiche_h3_send_response ??= _dylib.lookupFunction<_c_quiche_h3_send_response,_dart_quiche_h3_send_response>('quiche_h3_send_response');
  return _quiche_h3_send_response(
    conn,
    quic_conn,
    stream_id,
    headers,
    headers_len,
    fin,
  );
}
_dart_quiche_h3_send_response _quiche_h3_send_response;

int quiche_h3_send_body(
  ffi.Pointer<Http3Connection> conn,
  ffi.Pointer<Connection> quic_conn,
  int stream_id,
  ffi.Pointer<ffi.Uint8> body,
  int body_len,
  int fin,
) {
_quiche_h3_send_body ??= _dylib.lookupFunction<_c_quiche_h3_send_body,_dart_quiche_h3_send_body>('quiche_h3_send_body');
  return _quiche_h3_send_body(
    conn,
    quic_conn,
    stream_id,
    body,
    body_len,
    fin,
  );
}
_dart_quiche_h3_send_body _quiche_h3_send_body;

int quiche_h3_recv_body(
  ffi.Pointer<Http3Connection> conn,
  ffi.Pointer<Connection> quic_conn,
  int stream_id,
  ffi.Pointer<ffi.Uint8> out,
  int out_len,
) {
_quiche_h3_recv_body ??= _dylib.lookupFunction<_c_quiche_h3_recv_body,_dart_quiche_h3_recv_body>('quiche_h3_recv_body');
  return _quiche_h3_recv_body(
    conn,
    quic_conn,
    stream_id,
    out,
    out_len,
  );
}
_dart_quiche_h3_recv_body _quiche_h3_recv_body;

void quiche_h3_conn_free(
  ffi.Pointer<Http3Connection> conn,
) {
_quiche_h3_conn_free ??= _dylib.lookupFunction<_c_quiche_h3_conn_free,_dart_quiche_h3_conn_free>('quiche_h3_conn_free');
  return _quiche_h3_conn_free(
    conn,
  );
}
_dart_quiche_h3_conn_free _quiche_h3_conn_free;

}

class __fsid_t extends ffi.Struct{
}

abstract class quiche_error {
  static const int QUICHE_ERR_DONE = -1;
  static const int QUICHE_ERR_BUFFER_TOO_SHORT = -2;
  static const int QUICHE_ERR_UNKNOWN_VERSION = -3;
  static const int QUICHE_ERR_INVALID_FRAME = -4;
  static const int QUICHE_ERR_INVALID_PACKET = -5;
  static const int QUICHE_ERR_INVALID_STATE = -6;
  static const int QUICHE_ERR_INVALID_STREAM_STATE = -7;
  static const int QUICHE_ERR_INVALID_TRANSPORT_PARAM = -8;
  static const int QUICHE_ERR_CRYPTO_FAIL = -9;
  static const int QUICHE_ERR_TLS_FAIL = -10;
  static const int QUICHE_ERR_FLOW_CONTROL = -11;
  static const int QUICHE_ERR_STREAM_LIMIT = -12;
  static const int QUICHE_ERR_FINAL_SIZE = -13;
  static const int QUICHE_ERR_CONGESTION_CONTROL = -14;
}

class Config extends ffi.Struct{
}

abstract class quiche_cc_algorithm {
  static const int QUICHE_CC_RENO = 0;
  static const int QUICHE_CC_CUBIC = 1;
}

class Connection extends ffi.Struct{
}

class RangeBuf extends ffi.Struct{
}

abstract class quiche_shutdown {
  static const int QUICHE_SHUTDOWN_READ = 0;
  static const int QUICHE_SHUTDOWN_WRITE = 1;
}

class StreamIter extends ffi.Struct{
}

class quiche_stats extends ffi.Struct{
  @ffi.Int32()
  int recv;

  @ffi.Int32()
  int sent;

  @ffi.Int32()
  int lost;

  @ffi.Uint64()
  int rtt;

  @ffi.Int32()
  int cwnd;

  @ffi.Uint64()
  int delivery_rate;

}

class struct (anonymous at quiche.h:308:9) extends ffi.Struct{
  @ffi.Int32()
  int recv;

  @ffi.Int32()
  int sent;

  @ffi.Int32()
  int lost;

  @ffi.Uint64()
  int rtt;

  @ffi.Int32()
  int cwnd;

  @ffi.Uint64()
  int delivery_rate;

}

abstract class quiche_h3_error {
  /// /// There is no error or no work to do
  static const int QUICHE_H3_ERR_DONE = -1;
  /// /// The provided buffer is too short.
  static const int QUICHE_H3_ERR_BUFFER_TOO_SHORT = -2;
  /// /// Internal error in the HTTP/3 stack.
  static const int QUICHE_H3_ERR_INTERNAL_ERROR = -3;
  /// /// Endpoint detected that the peer is exhibiting behavior that causes.
  /// /// excessive load.
  static const int QUICHE_H3_ERR_EXCESSIVE_LOAD = -4;
  /// /// Stream ID or Push ID greater that current maximum was
  /// /// used incorrectly, such as exceeding a limit, reducing a limit,
  /// /// or being reused.
  static const int QUICHE_H3_ERR_ID_ERROR = -5;
  /// /// The endpoint detected that its peer created a stream that it will not
  /// /// accept.
  static const int QUICHE_H3_ERR_STREAM_CREATION_ERROR = -6;
  /// /// A required critical stream was closed.
  static const int QUICHE_H3_ERR_CLOSED_CRITICAL_STREAM = -7;
  /// /// No SETTINGS frame at beginning of control stream.
  static const int QUICHE_H3_ERR_MISSING_SETTINGS = -8;
  /// /// A frame was received which is not permitted in the current state.
  static const int QUICHE_H3_ERR_FRAME_UNEXPECTED = -9;
  /// /// Frame violated layout or size rules.
  static const int QUICHE_H3_ERR_FRAME_ERROR = -10;
  /// /// QPACK Header block decompression failure.
  static const int QUICHE_H3_ERR_QPACK_DECOMPRESSION_FAILED = -11;
  /// /// Error originated from the transport layer.
  static const int QUICHE_H3_ERR_TRANSPORT_ERROR = -12;
  /// /// The underlying QUIC stream (or connection) doesn't have enough capacity
  /// /// for the operation to complete. The application should retry later on.
  static const int QUICHE_H3_ERR_STREAM_BLOCKED = -13;
}

class Http3Config extends ffi.Struct{
}

class Http3Connection extends ffi.Struct{
}

abstract class quiche_h3_event_type {
  static const int QUICHE_H3_EVENT_HEADERS = 0;
  static const int QUICHE_H3_EVENT_DATA = 1;
  static const int QUICHE_H3_EVENT_FINISHED = 2;
}

class Http3Event extends ffi.Struct{
}

class quiche_h3_header extends ffi.Struct{
  ffi.Pointer<ffi.Uint8> name;

  @ffi.Int32()
  int name_len;

  ffi.Pointer<ffi.Uint8> value;

  @ffi.Int32()
  int value_len;

}

class struct (anonymous at quiche.h:449:9) extends ffi.Struct{
  ffi.Pointer<ffi.Uint8> name;

  @ffi.Int32()
  int name_len;

  ffi.Pointer<ffi.Uint8> value;

  @ffi.Int32()
  int value_len;

}

const int _STDINT_H = 1;

const int _FEATURES_H = 1;

const int _DEFAULT_SOURCE = 1;

const int __GLIBC_USE_ISOC2X = 1;

const int __USE_ISOC11 = 1;

const int __USE_ISOC99 = 1;

const int __USE_ISOC95 = 1;

const int _POSIX_SOURCE = 1;

const int _POSIX_C_SOURCE = 200809;

const int __USE_POSIX = 1;

const int __USE_POSIX2 = 1;

const int __USE_POSIX199309 = 1;

const int __USE_POSIX199506 = 1;

const int __USE_XOPEN2K = 1;

const int __USE_XOPEN2K8 = 1;

const int _ATFILE_SOURCE = 1;

const int __USE_MISC = 1;

const int __USE_ATFILE = 1;

const int __USE_FORTIFY_LEVEL = 0;

const int __GLIBC_USE_DEPRECATED_GETS = 0;

const int __GLIBC_USE_DEPRECATED_SCANF = 0;

const int _STDC_PREDEF_H = 1;

const int __STDC_IEC_559__ = 1;

const int __STDC_IEC_559_COMPLEX__ = 1;

const int __STDC_ISO_10646__ = 201706;

const int __GNU_LIBRARY__ = 6;

const int __GLIBC__ = 2;

const int __GLIBC_MINOR__ = 31;

const int _SYS_CDEFS_H = 1;

const int __glibc_c99_flexarr_available = 1;

const int __WORDSIZE = 64;

const int __WORDSIZE_TIME64_COMPAT32 = 1;

const int __SYSCALL_WORDSIZE = 64;

const int __LONG_DOUBLE_USES_FLOAT128 = 0;

const int __HAVE_GENERIC_SELECTION = 0;

const int __GLIBC_USE_LIB_EXT2 = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT_C2X = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT_C2X = 1;

const int __GLIBC_USE_IEC_60559_TYPES_EXT = 1;

const int _BITS_TYPES_H = 1;

const int __TIMESIZE = 64;

const int _BITS_TYPESIZES_H = 1;

const int __OFF_T_MATCHES_OFF64_T = 1;

const int __INO_T_MATCHES_INO64_T = 1;

const int __RLIM_T_MATCHES_RLIM64_T = 1;

const int __STATFS_MATCHES_STATFS64 = 1;

const int __FD_SETSIZE = 1024;

const int _BITS_TIME64_H = 1;

const int _BITS_WCHAR_H = 1;

const int __WCHAR_MAX = 2147483647;

const int __WCHAR_MIN = -2147483648;

const int _BITS_STDINT_INTN_H = 1;

const int _BITS_STDINT_UINTN_H = 1;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -9223372036854775808;

const int INT_FAST32_MIN = -9223372036854775808;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 9223372036854775807;
